--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,37 +2,32 @@ name: Our first python CI
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
   pull_request:
-    branches: ["main"]
+    branches:
+      - main
 
 jobs:
   test-and-lint:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.12", "3.13"]
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.12"
 
-      - name: Set up uv
-        uses: astral-sh/setup-uv@v3
-
-      - name: Install dependencies (with dev)
-        run: uv pip install -e ".[dev]"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest ruff
 
       - name: Lint with Ruff
-        run: uv run ruff check .
+        run: ruff check .
 
       - name: Test with pytest
-        run: uv run pytest
-
+        run: pytest
